# procman

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/rosconsole/: debug.config
include/procman_ros/: event_loop.hpp  procman_deputy.hpp  socket_monitor.hpp
msg/: ProcmanCmd.msg  ProcmanDeputyInfo.msg  ProcmanDiscovery.msg  ProcmanOrders.msg  ProcmanOutput.msg
procman_ros/: CMakeLists.txt  package.xml  sheriff.py  sheriff_cli.py
procman_ros/include/procman/: procinfo.hpp
procman_ros/include/procman_ros/: procman_deputy.hpp
procman_ros/procman_ros/: sheriff.py  sheriff_cli.py
procman_ros/procman_ros/sheriff_gtk/: command_console.py  command_model.py  sheriff_dialogs.py  sheriff_gtk.py
procman_ros/python/src/procman_ros/sheriff_gtk/: command_console.py  sheriff_gtk.py
procman_ros/sheriff_gtk/: command_console.py  sheriff_gtk.py
procman_ros/src/procman/: procinfo_linux.cpp  procman.cpp
procman_ros/src/procman_ros/: procman_deputy.cpp  socket_monitor.cpp
procman_ros_msgs/: CMakeLists.txt  package.xml
procman_ros_msgs/msg/: ProcmanCmd.msg  ProcmanCmdDesired.msg  ProcmanCmdStatus.msg  ProcmanDeputyInfo.msg  ProcmanDiscovery.msg  ProcmanOrders.msg  ProcmanOutput.msg
python/src/procman/: sheriff.py  sheriff_cli.py  sheriff_script.py
python/src/procman/sheriff_gtk/: command_console.py  sheriff_gtk.py
python/src/procman_ros/: sheriff.py  sheriff_cli.py  sheriff_config.py  sheriff_script.py
python/src/procman_ros/sheriff_gtk/: command_console.py  command_model.py  command_treeview.py  deputies_treeview.py  sheriff_dialogs.py  sheriff_gtk.py
scripts/: procman_ros_sheriff
src/procman/: exec_string_utils.cpp  procinfo_linux.cpp  procman.cpp
src/procman_ros/: event_loop.cpp  event_loop_test.cpp  procman_deputy.cpp  procman_deputy.hpp  socket_monitor.cpp
test/: test.cfg
