<package format="3">
  <name>procman_ros</name>
  <version>0.1.7</version>
  <description>Procman-ros is a tool for managing many processes distributed over one or more computers using ROS message passing. It is a fork of github.com/ashuang/procman.</description>
  <maintainer email="mcamurri@robots.ox.ac.uk">Marco Camurri</maintainer>
  <maintainer email="michal@robots.ox.ac.uk">Michal Staniaszek</maintainer>
  <license>BSD-3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>procman_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
